--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,18 @@
+# Binary Files
+bin/*
 *.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+target/classes/*
 
 # Package Files #
 *.jar
-*.war
-*.ear
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Logs
+logs/*
+*.log
+
+#This should be developer specific, not sure
+*.classpath
+
+#vim editor files
+*.swp
+
