--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,10 @@
   		<artifactId>log4j-core</artifactId>
   		<version>2.0-rc1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.lmax</groupId>
+  		<artifactId>disruptor</artifactId>
+  		<version>3.2.1</version>
+  	</dependency>
   </dependencies>
 </project>
