Developed the map framework

--- a/pom.xml
+++ b/pom.xml
@@ -1,50 +1,56 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>edu.uci.ics.luci</groupId>
-  <artifactId>TerraTower</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  <name>TerraTower</name>
-  <url>https://github.com/djp3/TerraTower</url>
-  <description>An augmented reality physical tower defense inspired game with a splash of capture the flag. The game engine is in Java and the clients are made in Unity for Android or iOS.</description>
-  <inceptionYear>5/28/2014</inceptionYear>
-  <dependencies>
-  	<dependency>
-  		<groupId>commons-configuration</groupId>
-  		<artifactId>commons-configuration</artifactId>
-  		<version>1.10</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.apache.logging.log4j</groupId>
-  		<artifactId>log4j-api</artifactId>
-  		<version>2.0-rc1</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>net.minidev</groupId>
-  		<artifactId>json-smart</artifactId>
-  		<version>2.0-RC3</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.apache.logging.log4j</groupId>
-  		<artifactId>log4j-core</artifactId>
-  		<version>2.0-rc1</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.lmax</groupId>
-  		<artifactId>disruptor</artifactId>
-  		<version>3.2.1</version>
-  	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>edu.uci.ics.luci</groupId>
+	<artifactId>TerraTower</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<build>
+		<sourceDirectory>src</sourceDirectory>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.7.2-SNAPSHOT</version>
+			</plugin>
+		</plugins>
+	</build>
+	<name>TerraTower</name>
+	<url>https://github.com/djp3/TerraTower</url>
+	<description>An augmented reality physical tower defense inspired game with a splash of capture the flag. The game engine is in Java and the clients are made in Unity for Android or iOS.</description>
+	<inceptionYear>5/28/2014</inceptionYear>
+	<dependencies>
+		<dependency>
+			<groupId>commons-configuration</groupId>
+			<artifactId>commons-configuration</artifactId>
+			<version>1.10</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.0-rc1</version>
+		</dependency>
+		<dependency>
+			<groupId>net.minidev</groupId>
+			<artifactId>json-smart</artifactId>
+			<version>2.0-RC3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.0-rc1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.lmax</groupId>
+			<artifactId>disruptor</artifactId>
+			<version>3.2.1</version>
+		</dependency>
+	</dependencies>
 </project>
