Set up enough so that events are logged to a file and that is tested.

--- a/TerraTower.properties
+++ b/TerraTower.properties
@@ -1,3 +1,4 @@
+event.logfile = events.log
 world.longitude.west = -117.8442599
 world.longitude.east = -117.8411751
 world.latitude.north = 33.6472217
