--- a/TerraTower.properties
+++ b/TerraTower.properties
@@ -1,4 +1,6 @@
 event.logfile = events.log
+world.name = MiddleEarth
+world.password = Bilbo
 world.longitude.west = -117.8442599
 world.longitude.east = -117.8411751
 world.latitude.north = 33.6472217
