--- a/TerraTower.properties
+++ b/TerraTower.properties
@@ -1,9 +1,81 @@
 event.logfile = events.log
 world.name = MiddleEarth
 world.password = Bilbo
-world.longitude.west = -117.8442599
-world.longitude.east = -117.8411751
-world.latitude.north = 33.6472217
-world.latitude.south = 33.6446338
-world.xsplits = 150
-world.ysplits = 150
+world.latitude.north = 33.6358538
+world.longitude.east = -117.8372621
+world.latitude.south = 33.635025
+world.longitude.west = -117.8384372
+//world.longitude.west = -117.8442599
+//world.longitude.east = -117.8411751
+//world.latitude.north = 33.6472217
+//world.latitude.south = 33.6446338
+world.xsplits = 200
+world.ysplits = 200
+
+clock.step = 30000
+
+player.name = Theo
+player.password = Theo!
+
+player.name = Dad
+player.password = Dad!
+
+player.name = Joy
+player.password = Joy!
+
+player.name = a
+player.password = a
+player.name = b
+player.password = b
+player.name = c
+player.password = c
+player.name = d
+player.password = d
+player.name = e
+player.password = e
+player.name = f
+player.password = f
+player.name = g
+player.password = g
+player.name = h
+player.password = h
+player.name = i
+player.password = i
+player.name = j
+player.password = j
+player.name = k
+player.password = k
+player.name = l
+player.password = l
+player.name = m
+player.password = m
+player.name = n
+player.password = n
+player.name = o
+player.password = o
+player.name = p
+player.password = p
+player.name = q
+player.password = q
+player.name = r
+player.password = r
+player.name = s
+player.password = s
+player.name = t
+player.password = t
+player.name = u
+player.password = u
+player.name = v
+player.password = v
+player.name = w
+player.password = w
+player.name = x
+player.password = x
+player.name = y
+player.password = y
+player.name = z
+player.password = z
+power_up = {"code":"glue63#auk"\,"tower_delay_delta":"-120000"\,"bomb_delay_delta":"0"\, "bomb_fuse_delta":"0"\,"redeemed":"false"}        
+power_up = {"code":"week44_the"\,"tower_delay_delta":"0"\,"bomb_delay_delta":"-120000"\, "bomb_fuse_delta":"0"\,"redeemed":"false"}        
+power_up = {"code":"Gaza85:vis"\,"tower_delay_delta":"0"\,"bomb_delay_delta":"0"\, "bomb_fuse_delta":"-120000"\,"redeemed":"false"}        
+power_up = {"code":"dii4!dotty"\,"tower_delay_delta":"-120000"\,"bomb_delay_delta":"-120000"\, "bomb_fuse_delta":"-120000"\,"redeemed":"false"}        
