--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
 			<version>1.10</version>
 		</dependency>
 		<dependency>
+			<groupId>net.sourceforge.findbugs</groupId>
+			<artifactId>annotations</artifactId>
+			<version>1.3.2</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
 			<version>2.0-rc1</version>
