--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,18 @@
 	<groupId>edu.uci.ics.luci</groupId>
 	<artifactId>TerraTower</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<properties>
+		<sqlite4java.version>1.0.392</sqlite4java.version>
+		<!-- For Windows 64 bit: -->
+		<!-- <sqlite4java.binary>sqlite4java-win32-x64</sqlite4java.binary>-->
+		<!-- <sqlite4java.binary.type>dll</sqlite4java.binary.type> -->
+		<!-- For linux 64 bit: -->
+		<!-- <sqlite4java.binary>libsqlite4java-linux-amd64</sqlite4java.binary> -->
+		<!-- <sqlite4java.binary.type>so</sqlite4java.binary.type> -->
+		<!-- For Mac 64 bit: -->
+		<sqlite4java.binary>libsqlite4java-osx</sqlite4java.binary>
+		<sqlite4java.binary.type>dylib</sqlite4java.binary.type> 
+	</properties>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
@@ -57,6 +69,23 @@
 			<groupId>com.lmax</groupId>
 			<artifactId>disruptor</artifactId>
 			<version>3.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.3.6</version>
+		</dependency>
+		 <dependency>
+			<groupId>com.almworks.sqlite4java</groupId>
+			<artifactId>sqlite4java</artifactId>
+			<type>jar</type>
+			<version>${sqlite4java.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.almworks.sqlite4java</groupId>
+			<artifactId>${sqlite4java.binary}</artifactId>
+			<type>${sqlite4java.binary.type}</type>
+			<version>${sqlite4java.version}</version>
 		</dependency>
 	</dependencies>
 </project>
