Cleaning up the server software

--- a/TerraTower.properties
+++ b/TerraTower.properties
@@ -9,8 +9,10 @@ world.longitude.west = -117.8384372
 //world.longitude.east = -117.8411751
 //world.latitude.north = 33.6472217
 //world.latitude.south = 33.6446338
-world.xsplits = 200
-world.ysplits = 200
+//world.xsplits = 200
+//world.ysplits = 200
+world.xsplits = 15
+world.ysplits = 15
 
 clock.step = 30000
 
