Moved some constants into the properties file

--- a/TerraTower.properties
+++ b/TerraTower.properties
@@ -14,6 +14,11 @@ world.longitude.west = -117.8384372
 world.xsplits = 15
 world.ysplits = 15
 
+tower.delay = 300000
+tower.strength = 10
+bomb.delay = 150000
+bomb.fuse = 150000
+
 clock.step = 30000
 
 player.name = Theo
